New buttons that show/hide form

--- a/index.html
+++ b/index.html
@@ -11,14 +11,93 @@
     
 </head>
 <body>
-    <select id="ddl">
-        <option value=""></option>
-        <option value="Colours">Colours</option>
-        <option value="Shapes">Shapes</option>
-        <option value="Names">Names</option>
-        </select>
-        
-        <select id="ddl2">
-        </select>
+  <button class="button-46" id="btn1">Stockholms län</button>
+  <button class="button-46" id="btn2">Skåne</button>
+  <button class="button-46" id="btn3">Något götaland</button>
+
+  <form id="form1" class="inactive">
+    <h3>Välj kommun</h3>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="stocklandia"/>
+        stocklandia
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="ngtannatställe"/>
+        något annat ställe i stockholm
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Lidingö"/>
+        Lidingö
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="därkungenbor"/>
+        därkungenbor
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Riksdagshuset"/>
+        Riksdagshuset
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="AlexSchulmanssophus"/>
+        AlexSchulmans sophus
+      </label>
+  </form>
+
+  <form id="form2" class="inactive">
+    <h3>Välj kommun</h3>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Malmö"/>
+        Malmö
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Lund"/>
+        Lund
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Kristianstad"/>
+        Kristianstad
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Helsingborg"/>
+        Helsingborg
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Landskrona"/>
+        Landskrona
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="ystad"/>
+        Ystad
+      </label>
+
+  </form>
+
+  <form id="form3" class="inactive">
+    <h3>Välj kommun</h3>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="gammel"/>
+        gammel
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="rödatorget"/>
+        röda torget
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="håkanhellström"/>
+        håkanhellström
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="måsarna"/>
+        måsarna
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Norje"/>
+        Norje
+      </label>
+    <label class="form-control">
+        <input type="checkbox" name="checkbox" value="Ullevi"/>
+        Ullevi
+      </label>
+  </form>
 </body>
 </html>
