deleted old js and moved addcompany

--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h2>Information om företaget</h2>
+    <h2>Information om företaget (admin-sida)</h2>
   <form id="companyForm">
     <label for="companyName">Företagets namn:</label>
     <input type="text" id="companyName" name="companyName" required><br><br>
