changed to correct name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="landingpage">
         <img src="./img/heroimage.jpg" />
         <div class="landingpage_title_and_textarea">
-          <h1>aLIAs - din väg till den perfekta LIA:n</h1>
+          <h1>digitaLIA - din väg till den perfekta LIA:n</h1>
           <p>
             Gör som 5300 studenter gjort innan dig - fyll i vårt
             matchningsformulär och få en skräddarsydd lista med företag som
