--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+  <nav>
+    <div class="navbar_icon">
+      <img src="./img/1.png" alt="icon" />
+    </div>
+    <ul>
+      <li><a href="admin.html">Admin - hem</a></li>
+      <li>Nav</li>
+      <li>Nav</li>
+      <li>Nav</li>
+    </ul>
+  </nav>
 
     <h2>Information om företaget (admin-sida)</h2>
   <form id="companyForm">
