--- a/html/admin.html
+++ b/html/admin.html
@@ -23,6 +23,8 @@
     </nav>
     <main>
         Välkommen, admin.
+
+        <div id="allCompaniesContainer"></div>
     </main>
   </body>
 </html>
