fixed icon in admin pages

--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <div class="navbar_icon">
-      <img src="./img/1.png" alt="icon" />
+      <img src="../img/1.png" alt="icon" />
     </div>
     <ul>
       <li><a href="admin.html">Admin - hem</a></li>
