--- a/html/admin.html
+++ b/html/admin.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="navbar_icon">
-        <img src="./img/1.png" alt="icon" />
+        <img src="../img/1.png" alt="icon" />
       </div>
       <ul>
         <li><a href="addcompany.html">Lägg till företag</a></li>
