redirect till profil efter login/signup

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./img/1.png" alt="icon" />
       </div>
       <ul>
-        <li>Nav</li>
+        <li><a href="html/login.html">Logga in</a></li>
         <li>Nav</li>
         <li>Nav</li>
         <li>Nav</li>
