--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -102,6 +102,10 @@
     <input type="radio" id="choice9Option2" name="companyChoices.choice9" value="2" required>
     <label for="choice9Option2">Familjeliv</label><br><br>
 
+    <input type="radio" id="choice10Option1" name="companyChoices.choice10" value="1" required>
+    <label for="choice10Option1">Generalist</label>
+    <input type="radio" id="choice10Option2" name="companyChoices.choice10" value="2" required>
+    <label for="choice10Option2">Specialist</label><br><br>
 
     <input type="submit" value="Submit">
   </form>
