updated admin form

--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -31,6 +31,9 @@
     <label for="companyLocation">Företagets adress:</label>
     <input type="text" id="companyLocation" name="companyLocation" required><br><br>
 
+    <label for="companyLocation">Stad:</label>
+    <input type="text" id="companyCity" name="companyCity" required><br><br>
+
     <label for="companyAbout">Företagets presentation:</label><br>
     <textarea id="companyAbout" name="companyAbout" rows="5" cols="40" required></textarea><br><br>
 
@@ -98,9 +101,9 @@
     <label for="choice8Option2">Genomtänkt</label><br><br>
 
     <input type="radio" id="choice9Option1" name="companyChoices.choice9" value="1" required>
-    <label for="choice9Option1">Festliv</label>
+    <label for="choice9Option1">Strukturerad</label>
     <input type="radio" id="choice9Option2" name="companyChoices.choice9" value="2" required>
-    <label for="choice9Option2">Familjeliv</label><br><br>
+    <label for="choice9Option2">Kreativ</label><br><br>
 
     <input type="radio" id="choice10Option1" name="companyChoices.choice10" value="1" required>
     <label for="choice10Option1">Generalist</label>
