--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
-    <script src="../main.js" defer></script>
-    <title>Document</title>
+    <script src="../adminform.js" type="module"></script>
+    <title>Lägg till företag - admin</title>
 </head>
 <body>
   <nav>
