--- a/html/admin.html
+++ b/html/admin.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="../style.css" />
-    <script src="../main.js" defer></script>
+    <script src="../adminmain.js" type="module"></script>
   </head>
   <body>
     <nav>
