--- a/html/matchwebsite.html
+++ b/html/matchwebsite.html
@@ -14,10 +14,10 @@
         <img src="../img/1.png" alt="icon" />
       </div>
       <ul>
-        <li>Nav</li>
-        <li>Nav</li>
-        <li>Nav</li>
-        <li>Nav</li>
+        <li><a href="../index.html">Startsida</a></li>
+        <li><a href="./profile.html">Profil</a></li>
+        <li><a href=""></a></li>
+        <li><a href=""></a></li>
       </ul>
     </nav>
     <main class="matching_site_main">
