btn to go from profile to match form

--- a/html/profile.html
+++ b/html/profile.html
@@ -21,6 +21,7 @@
         <button id="edit-info">Redigera</button>
     </form>
 
+    <button><a href="form.html">Börja matcha!</a></button>
 </body>
 
 </html>
