--- a/html/admin.html
+++ b/html/admin.html
@@ -16,7 +16,7 @@
       </div>
       <ul>
         <li><a href="addcompany.html">Lägg till företag</a></li>
-        <li>Nav</li>
+        <li>Logga ut</li>
         <li>Nav</li>
         <li>Nav</li>
       </ul>
