logout user from profile

--- a/html/profile.html
+++ b/html/profile.html
@@ -22,6 +22,8 @@
     </form>
 
     <button><a href="form.html">Börja matcha!</a></button>
+
+    <button id="logout-btn">Logga ut</button>
 </body>
 
 </html>
