--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -15,7 +15,7 @@
     </div>
     <ul>
       <li><a href="admin.html">Admin - hem</a></li>
-      <li>Nav</li>
+      <li id="adminLogout">Logga ut</li>
       <li>Nav</li>
     </ul>
   </nav>
