match now displays uwu

--- a/html/matchwebsite.html
+++ b/html/matchwebsite.html
@@ -21,14 +21,14 @@
       </ul>
     </nav>
     <main class="matching_site_main">
-      <div class="main_informationdiv">
-        <div class="matching_information_div_container_one">
+      <div class="main_informationdiv" id="contentHolder">
+        <!-- <div class="matching_information_div_container_one">
           <img src="../img/1.png" alt="logo" />
           <h4>COMPANY 1</h4>
           <p>Malmö, Sweden</p>
           <button>Läs mer</button>
-        </div>
-        <div class="matching_information_div_container_two">
+        </div> -->
+        <!-- <div class="matching_information_div_container_two">
           <img src="../img/1.png" alt="logo" />
           <h4>COMPANY 2</h4>
           <p>Malmö, Sweden</p>
@@ -39,7 +39,7 @@
           <h4>COMPANY 3</h4>
           <p>Malmö, Sweden</p>
           <button>Läs mer</button>
-        </div>
+        </div> -->
       </div>
       <aside class="aside_content_matchingsite">
         <h1>Utforska dina matchningar!</h1>
