--- a/html/profile.html
+++ b/html/profile.html
@@ -14,6 +14,8 @@
     <h1 id="student-greeting"></h1>
     <h3 id="student-school"></h3>
     <form id="student-info">
+        <input type="text" id="student-mail" disabled>
+        <input type="password" id="student-password" disabled>
         <textarea name="" id="student-about" cols="30" rows="10" disabled></textarea>
         <input type="text" id="student-link1" disabled>
         <input type="text" id="student-link2" disabled>
