--- a/html/profile.html
+++ b/html/profile.html
@@ -7,25 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
     <script src="../profile.js" defer></script>
+    <link rel="stylesheet" href="../profile.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
 
 <body>
+    <nav>
+        <div class="navbar_icon">
+            <img src="../img/1.png" alt="icon" />
+        </div>
+        <ul>
+            <li>Nav</li>
+            <li>Nav</li>
+            <li>Nav</li>
+            <li>Nav</li>
+        </ul>
+    </nav>
 
-    <h1 id="student-greeting"></h1>
-    <h3 id="student-school"></h3>
-    <form id="student-info">
-        <input type="text" id="student-mail" disabled>
-        <input type="password" id="student-password" disabled>
-        <textarea name="" id="student-about" cols="30" rows="10" disabled></textarea>
-        <input type="text" id="student-link1" disabled>
-        <input type="text" id="student-link2" disabled>
-        <input type="text" id="student-link3" disabled>
-        <button id="edit-info">Redigera</button>
-    </form>
+    <div id="student-profile">
+        <h1 id="student-greeting"></h1>
+        <h3 id="student-school"></h3>
+        <form id="student-info">
+            <label for="student-mail" id="label-mail">MAIL:</label>
+            <input type="text" id="student-mail" disabled>
+            <label for="student-password" id="label-password">LÖSENORD:</label>
+            <input type="password" id="student-password" disabled>
+            <label for="student-about" id="label-about">Om mig</label>
+            <textarea name="" id="student-about" cols="55" rows="18" disabled></textarea>
+            <label for="student-link1 student-link2 student-link3" id="label-links">LÄNKAR:</label>
+            <input type="text" id="student-link1" disabled>
+            <input type="text" id="student-link2" disabled>
+            <input type="text" id="student-link3" disabled>
+            <button id="edit-info">REDIGERA</button>
+        </form>
+    </div>
 
-    <button><a href="form.html">Börja matcha!</a></button>
+    <button id="match-btn"><a href="form.html">BÖRJA MATCHA!</a></button>
 
-    <button id="logout-btn">Logga ut</button>
+    <button id="logout-btn">LOGGA UT</button>
 </body>
 
 </html>
