form html. not done with js

--- a/html/form.html
+++ b/html/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../style.css" />
-    <script src="/main.js" defer></script>
+    <script src="../studentForm.js" defer></script>
   </head>
   <body>
     <nav>
@@ -22,86 +22,191 @@
     </nav>
     <main class="main_form_site">
       <div class="div_for_form_information">
-        <div class="div_for_checkboxes">
-          <h1>Min Drömplats är</h1>
+        <form action="" id="studentForm">
+          <div id="studentCityChoice">
+            <h2>Var vill du söka din lia-plats?</h2>
+            <button class="button-46" id="btn1">Stockholms län</button>
+            <button class="button-46" id="btn2">Skåne</button>
+            <button class="button-46" id="btn3">Något götaland</button>
 
-          <div class="checkbox_div_one">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Distans </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> På plats </label>
-            </form>
-          </div>
-          <div class="checkbox_div_two">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Jobba ensam </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Jobba i grupp </label>
-            </form>
-          </div>
-          <div class="checkbox_div_three">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Casual </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Business </label>
-            </form>
-          </div>
-          <div class="checkbox_div_four">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Biblotek </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Disco </label>
-            </form>
-          </div>
+            <div id="form1" class="inactive kommunForm">
+              <h3>Välj kommun</h3>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                stocklandia
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                något annat ställe i stockholm
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                Lidingö
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                därkungenbor
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                Riksdagshuset
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Stockholm" />
+                AlexSchulmans sophus
+              </label>
+            </div>
 
-          <h1>Jag som person är</h1>
+            <div id="form2" class="inactive kommunForm">
+              <h3>Välj kommun</h3>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Malmö
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Lund
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Kristianstad
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Helsingborg
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Landskrona
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Malmö" />
+                Ystad
+              </label>
+            </div>
 
-          <div class="checkbox_div_five">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Extrovet </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Introvert </label>
-            </form>
+            <div id="form3" class="inactive kommunForm">
+              <h3>Välj kommun</h3>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                gammel
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                röda torget
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                håkanhellström
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                måsarna
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                Norje
+              </label>
+              <label class="form-control">
+                <input type="checkbox" name="checkbox" value="Göteborg" />
+                Ullevi
+              </label>
+            </div>
           </div>
-          <div class="checkbox_div_six">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Festliv </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Familjeliv </label>
-            </form>
+          <div class="div_for_radioes">
+            <div action="">
+              <h1>Min Drömplats är</h1>
+
+              <div class="radio_div_one">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Distans </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> På plats </label>
+                </div>
+              </div>
+              <div class="radio_div_two">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Jobba ensam </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Jobba i grupp </label>
+                </div>
+              </div>
+              <div class="radio_div_three">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Casual </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Business </label>
+                </div>
+              </div>
+              <div class="radio_div_four">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Biblotek </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Disco </label>
+                </div>
+              </div>
+
+              <h1>Jag som person är</h1>
+
+              <div class="radio_div_five">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Extrovet </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Introvert </label>
+                </div>
+              </div>
+              <div class="radio_div_six">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Festliv </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Familjeliv </label>
+                </div>
+              </div>
+              <div class="radio_div_seven">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Öga för detalj </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Se helheten </label>
+                </div>
+              </div>
+              <div class="radio_div_eight">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Iniativtagande </label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Genomtänkt </label>
+                </div>
+              </div>
+              <div class="radio_div_ninth">
+                <div>
+                  <input type="radio" id="" name="option1" value="1" />
+                  <label for="option1"> Strukturerad</label>
+                  <input type="radio" id="" name="option1" value="2" />
+                  <label for="option2"> Kreativ </label>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div id="liaType">
+                <h2>Vad för lia-plats söker du?</h2>
+                <input type="radio" id="" name="option1" value="Frontend" />
+                <label for="option1"> Frontend </label>
+                <input type="radio" id="" name="option1" value="Backend" />
+                <label for="option2"> Backend </label>
+                <input type="radio" id="" name="option1" value="B2B" />
+                <label for="option2"> B2B </label>
+              </div>
+            </div>
+            <button id="submitMatchBtn">Matcha mig nu</button>
           </div>
-          <div class="checkbox_div_seven">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Öga för detalj </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Se helheten </label>
-            </form>
-          </div>
-          <div class="checkbox_div_eight">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Iniativtagande </label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Genomtänkt </label>
-            </form>
-          </div>
-          <div class="checkbox_div_ninth">
-            <form>
-              <input type="checkbox" id="" name="option1" value="option1" />
-              <label for="option1"> Strukturerad</label>
-              <input type="checkbox" id="" name="option2" value="option2" />
-              <label for="option2"> Kreativ </label>
-            </form>
-          </div>
-          <button>Matcha mig nu</button>
-        </div>
+        </form>
       </div>
       <aside class="aside_matching_information">
         <h3>Dags att matcha!</h3>
