--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
-    <link rel="stylesheet" href="../style.css">
-    <script src="../adminform.js" type="module"></script>
-    <title>Lägg till företag - admin</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <link rel="stylesheet" href="../style.css">
+  <script src="../adminform.js" type="module"></script>
+  <title>Lägg till företag - admin</title>
 </head>
+
 <body>
   <nav>
     <div class="navbar_icon">
-      <img src="../img/1.png" alt="icon" />
+      <img src="../img/digitalia.png" alt="icon" />
     </div>
     <ul>
       <li><a href="admin.html">Admin - hem</a></li>
@@ -20,7 +22,7 @@
     </ul>
   </nav>
 
-    <h2>Information om företaget (admin-sida)</h2>
+  <h2>Information om företaget (admin-sida)</h2>
   <form id="companyForm">
     <label for="companyName">Företagets namn:</label>
     <input type="text" id="companyName" name="companyName" required><br><br>
@@ -114,4 +116,5 @@
   </form>
 
 </body>
+
 </html>
