--- a/html/admin.html
+++ b/html/admin.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <script src="../adminmain.js" type="module"></script>
-  </head>
-  <body>
-    <nav>
-      <div class="navbar_icon">
-        <img src="../img/1.png" alt="icon" />
-      </div>
-      <ul>
-        <li><a href="addcompany.html">Lägg till företag</a></li>
-        <li id="adminLogout">Logga ut</li>
-        <li>Nav</li>
-        <li>Nav</li>
-      </ul>
-    </nav>
-    <main>
-        Välkommen, admin.
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
 
-        <div id="allCompaniesContainer"></div>
-    </main>
-  </body>
+  <link rel="stylesheet" href="../style.css" />
+  <script src="../adminmain.js" type="module"></script>
+</head>
+
+<body>
+  <nav>
+    <div class="navbar_icon">
+      <img src="../img/digitalia.png" alt="icon" />
+    </div>
+    <ul>
+      <li><a href="addcompany.html">Lägg till företag</a></li>
+      <li id="adminLogout">Logga ut</li>
+      <li>Nav</li>
+      <li>Nav</li>
+    </ul>
+  </nav>
+  <main>
+    Välkommen, admin.
+
+    <div id="allCompaniesContainer"></div>
+  </main>
+</body>
+
 </html>
