--- a/html/profile.html
+++ b/html/profile.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <div class="navbar_icon">
-            <img src="../img/1.png" alt="icon" />
+            <img src="../img/digitalia.png" alt="icon" />
         </div>
         <ul>
             <li>Nav</li>
