--- a/html/profile.html
+++ b/html/profile.html
@@ -17,8 +17,8 @@
             <img src="../img/digitalia.png" alt="icon" />
         </div>
         <ul>
-            <li>Nav</li>
-            <li>Nav</li>
+            <li><a href="../index.html">Startsida</a></li>
+            <li><a href="./profile.html">Profil</a></li>
             <li>Nav</li>
             <li>Nav</li>
         </ul>
