--- a/html/form.html
+++ b/html/form.html
@@ -16,10 +16,8 @@
       <img src="../img/digitalia.png" alt="icon" />
     </div>
     <ul>
-      <li>Nav</li>
-      <li>Nav</li>
-      <li>Nav</li>
-      <li>Nav</li>
+      <li><a href="../index.html">Startsida</a></li>
+      <li><a href="./profile.html">Profil</a></li>
     </ul>
   </nav>
   <main class="main_form_site">
