--- a/html/profile.html
+++ b/html/profile.html
@@ -40,7 +40,7 @@
         </form>
     </div>
 
-    <button id="match-btn"><a href="form.html">BÖRJA MATCHA!</a></button>
+    <button id="match-btn"><a href="./matchform.html">BÖRJA MATCHA!</a></button>
 
     <button id="logout-btn">LOGGA UT</button>
 </body>
