hero image filter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   </nav>
   <main>
     <div class="landingpage">
-      <img src="./img/heroimage.jpg" />
+      <div class="heroimagecontainer">
+        <img src="./img/heroimage.jpg" />
+      </div>
       <div class="landingpage_title_and_textarea">
         <h1>digitaLIA - din väg till den perfekta LIA:n</h1>
         <p>
