--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <link rel="stylesheet" href="../style.css">
-  <script src="../adminform.js" type="module"></script>
+  <link rel="stylesheet" href="../style/style.css">
+  <script src="../script/adminform.js" type="module"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
   <title>Lägg till företag - admin</title>
 </head>
 
@@ -18,7 +19,6 @@
     <ul>
       <li><a href="admin.html">Admin - hem</a></li>
       <li id="adminLogout">Logga ut</li>
-      <li>Nav</li>
     </ul>
   </nav>
 
