--- a/html/admin.html
+++ b/html/admin.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
 
-  <link rel="stylesheet" href="../style.css" />
-  <script src="../adminmain.js" type="module"></script>
+  <link rel="stylesheet" href="../style/style.css" />
+  <script src="../script/adminmain.js" type="module"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
 
 <body>
@@ -19,8 +20,6 @@
     <ul>
       <li><a href="addcompany.html">Lägg till företag</a></li>
       <li id="adminLogout">Logga ut</li>
-      <li>Nav</li>
-      <li>Nav</li>
     </ul>
   </nav>
   <main>
