--- a/html/matches.html
+++ b/html/matches.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
-  <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="../matches.css" />
-  <script src="../match.js" defer></script>
+  <link rel="stylesheet" href="../style/style.css" />
+  <link rel="stylesheet" href="../style/matches.css" />
+  <script src="../script/match.js" defer></script>
 </head>
 
 <body>
