--- a/html/profile.html
+++ b/html/profile.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
-    <script src="../profile.js" defer></script>
-    <link rel="stylesheet" href="../profile.css">
+    <script src="../script/profile.js" defer></script>
+    <link rel="stylesheet" href="../style/profile.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
 
