nav-links fixed

--- a/html/addcompany.html
+++ b/html/addcompany.html
@@ -18,7 +18,7 @@
     </div>
     <ul>
       <li><a href="admin.html">Admin - hem</a></li>
-      <li id="adminLogout">Logga ut</li>
+      <li><a href="" id="adminLogout">Logga ut</a></li>
     </ul>
   </nav>
 
