--- a/html/admin.html
+++ b/html/admin.html
@@ -19,7 +19,7 @@
     </div>
     <ul>
       <li><a href="addcompany.html">Lägg till företag</a></li>
-      <li id="adminLogout">Logga ut</li>
+      <li><a href="" id="adminLogout">Logga ut</a></li>
     </ul>
   </nav>
   <main>
