--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="style/style.css" />
+  <script src="script/index.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
 
@@ -16,8 +17,8 @@
     <div class="navbar_icon">
       <img src="./img/digitalia.png" alt="icon" />
     </div>
-    <ul>
-      <li><a href="html/login.html">Logga in</a></li>
+    <ul id="nav">
+      <li><a id="nav-link" href="html/login.html">Logga in</a></li>
     </ul>
   </nav>
   <main>
@@ -32,7 +33,7 @@
           matchningsformulär och få en skräddarsydd lista med företag som
           passar dig!
         </p>
-        <button>Matcha mig</button>
+        <button id="match-btn">Matcha mig</button>
       </div>
     </div>
   </main>
