--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>digitaLIA</title>
 
   <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="style/index.css" />
   <script src="script/index.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
 </head>
