fix buttons on matchform

--- a/html/matchform.html
+++ b/html/matchform.html
@@ -28,9 +28,9 @@
       <form action="" id="studentForm">
         <div id="studentCityChoice">
           <h2>Var vill du söka din lia-plats?</h2>
-          <button class="button-46" id="btn1">Stockholms län</button>
-          <button class="button-46" id="btn2">Skåne</button>
-          <button class="button-46" id="btn3">Något götaland</button>
+          <button class="cityButton" id="btn1">Stockholms län</button>
+          <button class="cityButton" id="btn2">Skåne</button>
+          <button class="cityButton" id="btn3">Något götaland</button>
             <div id="form1" class="inactive kommunForm">
               <div>
                 <h3>Välj kommun</h3>
