--- a/html/profile.html
+++ b/html/profile.html
@@ -22,6 +22,7 @@
         </div>
         <ul>
             <li><a href="../index.html">Startsida</a></li>
+            <li id="match-link"><a href="matches.html">Matchningar</a></li>
             <li id="logout-link"><a href="">Logga ut</a></li>
         </ul>
     </nav>
